--- a/src/main/resources/static/auth.html
+++ b/src/main/resources/static/auth.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Ввод ID</h1>
-<img src="/images/key.jpg"> <br/>
+<img src="/key.png"> <br/>
 <h2>дрона</h2>
 <form name="set1" action="auth/fillDrone" method="post">
     Ваш ID: <input type="password" name="hashName" required="true">
