--- a/src/main/resources/static/getfire.html
+++ b/src/main/resources/static/getfire.html
@@ -5,10 +5,10 @@
   <title>получение координат пожара</title>
 </head>
 <body>
-<form name="getfire" action="fire/get" method="post">
+<form name="getfire" action="fire/get" method="get">
     Ваш ID: <input type="password" name="hashName" required="true">
     со времени: <input type="text" name="timeFrom" required="true" value="Thu Jun 09 20:14:57 GMT+03:00 2016">
-    <input type="submit" value="добавить">
+    <input type="submit" value="получить">
 </form>
 </body>
 </html>
